--- a/flavour-fusion-backend/package.json
+++ b/flavour-fusion-backend/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.8.6",
+    "multer": "^1.4.5-lts.2",
     "stripe": "^18.0.0",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
